# syncflow

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  compose.yaml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 49a55ca1c10d_add_attachments_table.py  518feda4bbb2_add_comments_and_attachments.py  5702b6426e7e_make_team_lead_id_nullable.py  6ac4ab140167_add_comments_table.py  76fc1badc92c_initial_migration.py  95c71a9eb65b_add_teams_relationship.py  966424dc2e7f_final_migration.py  9c1b26401cc8_add_team_id_to_users.py  a270f6db6585_add_channel_message.py  d12e9674c053_add_channel_messages.py  e72dc19bea8a_add_cascade_delete.py
app/: main.py  requirements.txt
app/core/: config.py  database.py  dependencies.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  attachment.py  audit_log.py  channel.py  channel_member.py  channel_message.py  channels.py  comment.py  company.py  invitation.py  message.py  notification.py  project.py  project_link.py  project_member.py  project_team.py  task.py  task_assign.py  task_attachment.py  task_comment.py  task_integration.py  task_submission.py  team.py  team_member.py  team_members.py  thread.py  user.py
app/routes/: attachments.py  auth.py  channel.py  comments.py  project.py  task.py  team.py  users.py
app/schemas/: attachment.py  channel.py  comment.py  company.py  task.py  (+3 more)
migrations/: env.py
tests/: conftest.py  helpers.py  test_attachments.py  test_auth.py  test_comments.py  test_projects.py  test_tasks.py  test_teams.py
(+11 files in other folders)
